--- a/Report/ref.bib
+++ b/Report/ref.bib
@@ -104,3 +104,12 @@ title = {{Deep Learning Strong Parts for Pedestrian Detection}},
 url = {http://personal.ie.cuhk.edu.hk/{~}pluo/pdf/tianLWTiccv15.pdf},
 year = {2015}
 }
+
+@inproceedings{van2011segmentation,
+  title={Segmentation as selective search for object recognition},
+  author={Van de Sande, Koen EA and Uijlings, Jasper RR and Gevers, Theo and Smeulders, Arnold WM},
+  booktitle={Computer Vision (ICCV), 2011 IEEE International Conference on},
+  pages={1879--1886},
+  year={2011},
+  organization={IEEE}
+}
