--- a/Report/ref.bib
+++ b/Report/ref.bib
@@ -66,24 +66,6 @@ url = {http://arxiv.org/abs/1509.04874},
 year = {2015}
 }
 
-@inproceedings{Geiger2012,
-abstract = {Today, visual recognition systems are still rarely employed in robotics applications. Perhaps one of the main reasons for this is the lack of demanding benchmarks that mimic such scenarios. In this paper, we take advantage of our autonomous driving platform to develop novel challenging benchmarks for the tasks of stereo, optical flow, visual odometry/SLAM and 3D object detection. Our recording platform is equipped with four high resolution video cameras, a Velodyne laser scanner and a state-of-the-art localization system. Our benchmarks comprise 389 stereo and optical flow image pairs, stereo visual odometry sequences of 39.2 km length, and more than 200k 3D object annotations captured in cluttered scenarios (up to 15 cars and 30 pedestrians are visible per image). Results from state-of-the-art algorithms reveal that methods ranking high on established datasets such as Middlebury perform below average when being moved outside the laboratory to the real world. Our goal is to reduce this bias by providing challenging benchmarks with novel difficulties to the computer vision community. Our benchmarks are available online at: www.cvlibs.net/datasets/kitti.},
-author = {Geiger, A. and Lenz, P. and Urtasun, R.},
-booktitle = {2012 IEEE Conference on Computer Vision and Pattern Recognition},
-doi = {10.1109/CVPR.2012.6248074},
-isbn = {978-1-4673-1228-8},
-issn = {1063-6919},
-keywords = {3D object detection,Benchmark testing,Cameras,KITTI vision benchmark suite,Measurement,Middlebury perform,Optical imaging,Optical sensors,SLAM,SLAM (robots),Velodyne laser scanner,Visualization,autonomous driving,high resolution video cameras,image sequences,object detection,optical flow image pairs,robot vision,stereo image processing,stereo visual odometry sequences,video signal processing,visual recognition systems},
-mendeley-groups = {CV},
-month = {jun},
-pages = {3354--3361},
-publisher = {IEEE},
-shorttitle = {Computer Vision and Pattern Recognition (CVPR), 20},
-title = {{Are we ready for autonomous driving? The KITTI vision benchmark suite}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6248074},
-year = {2012}
-}
-
 @inproceedings{Dollar2009,
 abstract = {Pedestrian detection is a key problem in computer vision, with several applications including robotics, surveillance and automotive safety. Much of the progress of the past few years has been driven by the availability of challenging public datasets. To continue the rapid rate of innovation, we introduce the Caltech Pedestrian Dataset, which is two orders of magnitude larger than existing datasets. The dataset contains richly annotated video, recorded from a moving vehicle, with challenging images of low resolution and frequently occluded people. We propose improved evaluation metrics, demonstrating that commonly used per-window measures are flawed and can fail to predict performance on full images. We also benchmark several promising detection systems, providing an overview of state-of-the-art performance and a direct, unbiased comparison of existing methods. Finally, by analyzing common failure cases, we help identify future research directions for the field.},
 author = {Dollar, P. and Wojek, C. and Schiele, B. and Perona, P.},
@@ -111,6 +93,7 @@ url = {http://personal.ie.cuhk.edu.hk/{~}pluo/pdf/tianLWTiccv15.pdf},
 year = {2015}
 }
 
+% Add by Zhen:
 @inproceedings{van2011segmentation,
   title={Segmentation as selective search for object recognition},
   author={Van de Sande, Koen EA and Uijlings, Jasper RR and Gevers, Theo and Smeulders, Arnold WM},
@@ -118,4 +101,22 @@ year = {2015}
   pages={1879--1886},
   year={2011},
   organization={IEEE}
+}
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={IEEE}
+}
+
+@INPROCEEDINGS{Geiger2012CVPR,
+  author = {Andreas Geiger and Philip Lenz and Raquel Urtasun},
+  title = {Are we ready for Autonomous Driving? The KITTI Vision Benchmark Suite},
+  booktitle = {Conference on Computer Vision and Pattern	Recognition (CVPR)},
+  year = {2012}
 }
